Prevent text-selection behavior on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -40,6 +40,11 @@ h1 {
     border-radius: 8px;
     position: relative; 
     z-index: 1;
+    -webkit-touch-callout: none; /* Prevents callout menu on iOS */
+    -webkit-user-select: none;   /* Safari */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* IE/Edge */
+    user-select: none;
 }
 
 /* Loading Message Style */
